0029779: Visualization, SelectMgr_SelectableObject - sensitivity change for object not activated in given mode leads to crash